--- a/src/css/Moviecard.css
+++ b/src/css/Moviecard.css
@@ -14,9 +14,9 @@
 }
 
 .movie-poster {
-  position: relative;
-  aspect-ratio: 2/3;
+  position: absolute;
   width: 100%;
+  height: 100%;
 }
 
 .movie-poster img {
