--- a/src/css/Moviecard.css
+++ b/src/css/Moviecard.css
@@ -14,7 +14,7 @@
 }
 
 .movie-poster {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -48,8 +48,8 @@
   opacity: 1;
 }
 
-.favorite-btn {
-  position: absolute;
+.favourite-btn {
+  position: fixed;
   top: 1rem;
   right: 1rem;
   color: white;
@@ -65,11 +65,11 @@
   transition: background-color 0.2s;
 }
 
-.favorite-btn:hover {
+.favourite-btn:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.favorite-btn.active {
+.favourite-btn.active {
   color: #ff4757;
 }
 
@@ -116,7 +116,7 @@
     padding: 0.75rem;
   }
 
-  .favorite-btn {
+  .favourite-btn {
     width: 32px;
     height: 32px;
     font-size: 1.2rem;
