--- a/src/css/Favourites.css
+++ b/src/css/Favourites.css
@@ -1,12 +1,13 @@
 .favourites {
   padding: 2rem;
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
 }
 
 .favourites h2 {
   margin-bottom: 2rem;
-  text-align: center;
+  text-align: justify;
   font-size: 2.5rem;
   color: #ffffff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
