--- a/src/css/Moviecard.css
+++ b/src/css/Moviecard.css
@@ -9,6 +9,18 @@
   flex-direction: column;
 }
 
+.favs-grid {
+  display: flex;
+  overflow-x: auto;
+  gap: 1.5rem; 
+  justify-content: start; 
+}
+
+.favs-grid .movie-card{
+  flex: 1 1 auto;
+  width: 300px;
+}
+
 .movie-card:hover {
   transform: translateY(-5px);
 }
@@ -72,6 +84,8 @@
 .favourite-btn.active {
   color: #ff4757;
 }
+
+
 
 .rating-select {
   background-color: rgba(0, 0, 0, 0.7);
