--- a/src/css/Favourites.css
+++ b/src/css/Favourites.css
@@ -7,7 +7,7 @@
 
 .favourites h2 {
   margin-bottom: 2rem;
-  text-align: justify;
+  text-align: center;
   font-size: 2.5rem;
   color: #ffffff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
